<resources>
    <string name="app_name">Travel Journal</string>
    <string name="date">DD/MM/YY</string>
    <string name="tripn">Trip Name</string>
    <string name="d">Destination</string>
    <string name="tt">Trip type</string>
    <string name="cb">City break</string>
    <string name="ss">See side</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sing out</string>
    <string name="signed_out">Signed Out</string>
    <string name="loading">Loading..</string>
    <string name="google_status_fmt">Google status</string>
    <string name="firebase_status_fmt">Firebase status</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="single_click">Add to favourite</string>
    <string name="button_item">Travel added</string>
    <string name="long_click">Edit trip</string>
    <string name="menu">GO TO MENU</string>
</resources>
